--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Licenta</string>
+    <string name="app_name"> </string>
     <string name="title_activity_meniu">Meniu</string>
     <string name="navigation_drawer_open">Deschide navigation drawer</string>
     <string name="navigation_drawer_close">Inchide navigation drawer</string>
     <string name="nav_header_title">Retete culinare</string>
     <string name="nav_header_subtitle">---</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Iesire din cont</string>
 </resources>
